deploy/kubernetes/resources/ingress/customer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  name: customer-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: customerservice
          servicePort: 9000
        path: /api/chirps
      - backend:
          serviceName: web
          servicePort: 9000
  tls:
  - secretName: customer-tls-secret
